# game-script-kit

./: .gitignore  README.md  pyproject.toml
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
docs/: project-structure-analysis.md
openspec/specs/coordinate-recorder-tool/: spec.md
openspec/specs/game-script-core/: spec.md
openspec/specs/input-device-adapter/: spec.md
openspec/specs/script-action-model/: spec.md
openspec/specs/script-management/: spec.md
src/game_automation/: __init__.py  cli.py  coordinate_recorder_cli.py  recorded_click_cli.py  script_cli.py  star_cli.py
src/game_automation/adapters/: __init__.py  dry_run.py  macos.py
src/game_automation/core/: __init__.py  actions.py  demo_workflow.py  errors.py  ports.py  recorded_click_script.py  runner.py  script.py  script_catalog.py  windows.py
src/game_automation/domain/: __init__.py  actions.py  geometry.py  script.py  windows.py
src/game_automation/engine/: __init__.py  ports.py  runner.py
src/game_automation/scripts/: __init__.py  catalog.py  demo.py  recorded_clicks.py
src/game_automation/scripts_manager/: __init__.py  catalog.py  demo.py  recorded_clicks.py
src/game_automation/tools/: __init__.py  coordinate_recorder.py
tests/: test_coordinate_recorder.py  test_coordinate_recorder_adapters.py  test_demo_workflow.py  test_macos_adapter.py  test_recorded_click_cli.py  test_recorded_click_script.py  test_runner.py  test_script_catalog.py  test_script_cli.py  test_script_model.py  test_windows.py
tests/support/: __init__.py  fake_device.py
(+32 files in other folders)
