[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "star-game-automation"
version = "0.1.0"
description = "A small port-and-adapter game automation demo."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
game-automation-demo = "game_automation.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
