[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "star-game-automation"
version = "0.1.0"
description = "A small port-and-adapter game automation demo."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
game-automation-demo = "game_automation.cli:main"
game-coordinate-recorder = "game_automation.coordinate_recorder_cli:main"
game-recorded-clicks = "game_automation.recorded_click_cli:main"
game-scripts = "game_automation.script_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
